--- a/locale/be/LC_MESSAGES/django.po
+++ b/locale/be/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-19 01:42+0300\n"
+"POT-Creation-Date: 2023-04-17 18:13+0300\n"
 "PO-Revision-Date: 2022-10-31 18:40+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -26,6 +26,7 @@ msgstr "Рэгіён"
 msgid "Государство"
 msgstr "Дзяржава"
 
+#. Last modified by Felix Kauffman, id 19
 #: bill/models/change_taxes.py:38
 msgid "Финансирование"
 msgstr "Фінансаванне"
@@ -93,7 +94,7 @@ msgstr "Узровень ЦЭС"
 
 #: factory/models/production_log.py:29 factory/models/production_log.py:48
 #: state/models/treasury.py:38 storage/models/storage.py:38
-#: storage/models/storage.py:112 storage/models/storage.py:234
+#: storage/models/storage.py:112
 #, fuzzy
 #| msgid "Наличные"
 msgctxt "goods"
@@ -541,6 +542,7 @@ msgstr "Скасаваць вывучэньне навыка"
 msgid "Отмена"
 msgstr "Скасаваць"
 
+#. Last modified by Felix Kauffman, id 19
 #: party/templates/party/redesign/manage.html:351
 #: player/templates/player/redesign/new_player.html:136
 #: player/templates/player/redesign/profile.html:360
@@ -834,14 +836,18 @@ msgctxt "party_view"
 msgid "подать заявку"
 msgstr "недаступна"
 
+#. Last modified by Felix Kauffman, id 19
 #: party/templates/primaries/primaries.html:25
 msgid "primaries_in_party"
 msgstr ""
 
-#: party/views/lists/region_parties.py:86 party/views/lists/state_parties.py:40
+#. Last modified by Felix Kauffman, id 19
+#: party/views/lists/region_parties.py:86
+#: party/views/lists/state_parties.py:40
 msgid "Партии региона"
 msgstr "Партыі рэгіёна"
 
+#. Last modified by Felix Kauffman, id 19
 #: party/views/lists/world_parties.py:87
 msgid "Партии мира"
 msgstr "Партыі свету"
@@ -1363,12 +1369,16 @@ msgstr "Узнагароды падзеі:"
 
 #: player/templates/player/redesign/game_event/newyear.html:393
 msgctxt "game_event"
-msgid "Заполняется расходованием энергии, как и ежедневное финансирование, и зависит только от твоих личных усилий."
+msgid ""
+"Заполняется расходованием энергии, как и ежедневное финансирование, и "
+"зависит только от твоих личных усилий."
 msgstr ""
 
 #: player/templates/player/redesign/game_event/newyear.html:394
 msgctxt "game_event"
-msgid "Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один из трёх этапов зимней прогрессионой рамки аватара."
+msgid ""
+"Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один"
+" из трёх этапов зимней прогрессионой рамки аватара."
 msgstr ""
 
 #: player/templates/player/redesign/game_event/newyear.html:395
@@ -1386,12 +1396,16 @@ msgstr ""
 
 #: player/templates/player/redesign/game_event/newyear.html:397
 msgctxt "game_event"
-msgid "Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь соответствующий этап личной."
+msgid ""
+"Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь"
+" соответствующий этап личной."
 msgstr ""
 
 #: player/templates/player/redesign/game_event/newyear.html:398
 msgctxt "game_event"
-msgid "Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы получить свою награду"
+msgid ""
+"Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы "
+"получить свою награду"
 msgstr ""
 
 #: player/templates/player/redesign/lists/skill_top.html:26
@@ -1484,6 +1498,7 @@ msgstr "Нікнэйм"
 msgid "Аватар"
 msgstr "Аватар"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/templates/player/redesign/new_player.html:48
 msgid "Часовой пояс"
 msgstr "Часавы пояс"
@@ -1496,6 +1511,7 @@ msgstr "агляд"
 msgid "чат"
 msgstr "чат"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/templates/player/redesign/overview.html:66
 msgid "мир"
 msgstr "свет"
@@ -1577,6 +1593,7 @@ msgctxt "overview"
 msgid "магазин"
 msgstr "крама"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/templates/player/redesign/overview_skills.html:23
 #: player/templates/player/redesign/overview_skills.html:72
 #: player/templates/player/redesign/overview_skills.html:121
@@ -1629,6 +1646,7 @@ msgctxt "skill_cancel"
 msgid "Изучение навыка будет отменено. Продолжить?"
 msgstr "Вывучэньне навыка будзе скасавана. Падцьвердзіць?"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/templates/player/redesign/overview_skills.html:178
 msgid "Продолжить"
 msgstr "Пацвердзіць"
@@ -1733,6 +1751,7 @@ msgctxt "profile"
 msgid "не активен"
 msgstr "не актыўны"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/templates/player/redesign/profile.html:187
 #: player/templates/player/redesign/view_profile.html:76
 msgctxt "profile"
@@ -1888,6 +1907,7 @@ msgstr ""
 msgid "since"
 msgstr ""
 
+#. Last modified by Felix Kauffman, id 19
 #: player/templatetags/redesign/skill_top/endurance_top.py:46
 #: player/templatetags/redesign/skill_top/endurance_top.py:47
 #: player/templatetags/redesign/skill_top/knowledge_top.py:46
@@ -1988,23 +2008,28 @@ msgctxt "wallet"
 msgid "Описание"
 msgstr "Абсталяваньне"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/change_back_allow.py:41
-#: player/views/change_wiki_hide_allow.py:41 player/views/full_auto_allow.py:41
+#: player/views/change_wiki_hide_allow.py:41
+#: player/views/full_auto_allow.py:41
 msgid "Некорректное значение"
 msgstr "Некарэктнае значэнне"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/change_back_allow.py:42 player/views/change_back_allow.py:58
 msgid "Настройка партийного фона"
 msgstr "Налады партыйнага фона"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/change_back_allow.py:57
-#: player/views/change_wiki_hide_allow.py:57 player/views/full_auto_allow.py:57
-#: player/views/set_language.py:54 player/views/set_timezone.py:43
-#: region/views/cancel_auto.py:35 region/views/retrieve_cash.py:42
-#: region/views/start_auto.py:78
+#: player/views/change_wiki_hide_allow.py:57
+#: player/views/full_auto_allow.py:57 player/views/set_language.py:54
+#: player/views/set_timezone.py:43 region/views/cancel_auto.py:35
+#: region/views/retrieve_cash.py:42 region/views/start_auto.py:78
 msgid "Ошибка метода"
 msgstr "Памылка метаду"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/change_wiki_hide_allow.py:42
 #: player/views/change_wiki_hide_allow.py:58
 msgid "Скрыть кнопку Wiki"
@@ -2017,23 +2042,31 @@ msgctxt "profile"
 msgid "Некорректный код фона игры"
 msgstr "Некарэктны запрос"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/color_change.py:31 player/views/color_change.py:43
 #: player/views/color_change.py:55 player/views/color_change.py:67
+#| msgid "Некорректный запрос"
 msgctxt "profile"
 msgid "Некорректный код цвета"
 msgstr "Некарэктны код коллеру"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/color_change.py:42
+#| msgid "Некорректный запрос"
 msgctxt "profile"
 msgid "Некорректный код блоков игры"
 msgstr "Некарэктны код блокаў гульні"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/color_change.py:54
+#| msgid "Некорректное значение"
 msgctxt "profile"
 msgid "Некорректный код текста игры"
 msgstr "Некарэктны код тэксту гульні"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/color_change.py:66
+#| msgid "Некорректный запрос"
 msgctxt "profile"
 msgid "Некорректный код акцентов игры"
 msgstr "Некарэктны код акцэнтаў гульні"
@@ -2049,11 +2082,13 @@ msgstr "Некарэктны запрос"
 msgid "Десять минут ещё не прошло"
 msgstr "Дзесяць хвілін яшчэ не прайшлі"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/expense_energy.py:29 player/views/expense_energy.py:52
 #: player/views/expense_energy.py:61 player/views/expense_energy.py:72
 msgid "Пополнение энергии"
 msgstr "Папаўненне энэргіі"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/expense_energy.py:51
 msgid "Пополнение энергии не требуется"
 msgstr "Папаўненне энэргіі не патрабуецца"
@@ -2062,10 +2097,12 @@ msgstr "Папаўненне энэргіі не патрабуецца"
 msgid "Недостаточно Энергетиков. Создайте их в Хранилище Склада"
 msgstr "Недастаткова Энэргетыкаў. Стварыце іх у кладоўні"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/expense_energy.py:71
 msgid "Ошибка типа запроса"
 msgstr "Памылка тыпу запроса"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/full_auto_allow.py:42 player/views/full_auto_allow.py:58
 msgid "Энергетики в авто-добыче"
 msgstr "Энергетыкі ў аўта-здабычы"
@@ -2075,6 +2112,7 @@ msgctxt "game_event_ny"
 msgid "С новым годом!"
 msgstr ""
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/lists/cash_top.py:94
 msgid "Герб"
 msgstr "Герб"
@@ -2091,7 +2129,10 @@ msgstr "Грамадзяне рэгіёна"
 msgid "Население региона"
 msgstr "Насельніцтва рэгіёну"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/lists/skill_top.py:21
+#| msgctxt "profile"
+#| msgid "характеристики"
 msgid "Топ по характеристикам"
 msgstr "Топ па характарыстыкам"
 
@@ -2889,11 +2930,11 @@ msgctxt "goods"
 msgid "БПЛА - лимит"
 msgstr "БПЛА"
 
-#: storage/models/storage.py:289
+#: storage/models/storage.py:271
 msgid "positive_spend_stock_req"
 msgstr ""
 
-#: storage/models/storage.py:294
+#: storage/models/storage.py:276
 msgid "not_enough"
 msgstr ""
 
@@ -3246,11 +3287,6 @@ msgctxt "assets"
 msgid "уничтожить"
 msgstr "Падцьвердзіць"
 
-#: storage/templates/storage/redesign/assets.html:43
-msgctxt "assets"
-msgid "уверен"
-msgstr ""
-
 #: storage/templates/storage/redesign/assets.html:49
 #, fuzzy
 #| msgid "Вы летите в"
@@ -3398,7 +3434,9 @@ msgstr "Папаўненьне энэргіі"
 
 #: storage/templates/storage/redesign/storage.html:258
 msgctxt "storage_upgrade"
-msgid "Выберите товары в каждой из категорий, ёмкость Склада для которых будет увеличена"
+msgid ""
+"Выберите товары в каждой из категорий, ёмкость Склада для которых будет "
+"увеличена"
 msgstr ""
 
 #: storage/templates/storage/redesign/storage.html:265
@@ -3440,12 +3478,16 @@ msgstr "прэміюм-акаўнт"
 
 #: storage/templates/storage/redesign/storage.html:366
 msgctxt "storage_assets"
-msgid "Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно отменить. Продолжить?"
+msgid ""
+"Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно "
+"отменить. Продолжить?"
 msgstr ""
 
 #: storage/templates/storage/redesign/storage.html:368
 msgctxt "storage_assets"
-msgid "Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию невозможно отменить. Продолжить?"
+msgid ""
+"Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию "
+"невозможно отменить. Продолжить?"
 msgstr ""
 
 #: storage/templates/storage/redesign/storage.html:371
