--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-19 01:42+0300\n"
+"POT-Creation-Date: 2023-04-17 18:13+0300\n"
 "PO-Revision-Date: 2023-04-12 02:35+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -87,7 +87,7 @@ msgstr "Nivel"
 
 #: factory/models/production_log.py:29 factory/models/production_log.py:48
 #: state/models/treasury.py:38 storage/models/storage.py:38
-#: storage/models/storage.py:112 storage/models/storage.py:234
+#: storage/models/storage.py:112
 msgctxt "goods"
 msgid "Наличные"
 msgstr "Efectivo"
@@ -108,6 +108,7 @@ msgctxt "goods"
 msgid "Пластик"
 msgstr "Plástico"
 
+#. Last modified by Subaru, id 768
 #: factory/models/project.py:62 storage/models/transport.py:128
 msgctxt "goods"
 msgid "Дизель"
@@ -610,6 +611,7 @@ msgctxt "party_view"
 msgid "информация"
 msgstr "información"
 
+#. Last modified by Subaru, id 768
 #: party/templates/party/redesign/party_view.html:49
 msgctxt "party_view"
 msgid "состав"
@@ -649,7 +651,8 @@ msgstr "aplicar"
 msgid "primaries_in_party"
 msgstr "Primarias del partido "
 
-#: party/views/lists/region_parties.py:86 party/views/lists/state_parties.py:40
+#: party/views/lists/region_parties.py:86
+#: party/views/lists/state_parties.py:40
 msgid "Партии региона"
 msgstr "Partidos de la región"
 
@@ -744,6 +747,7 @@ msgctxt "mining"
 msgid "Ошибка метода"
 msgstr "Error de metodo"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/remove_role.py:24
 msgctxt "party_manage"
 msgid "Должность не найдена"
@@ -759,6 +763,7 @@ msgctxt "party_manage"
 msgid "Удаление должности"
 msgstr "Quitar posición"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/remove_role.py:36
 msgctxt "party_manage"
 msgid "Это неудаляемая должность"
@@ -767,7 +772,8 @@ msgstr "Esta es una posición no revocable"
 #: party/views/management/roles/remove_role.py:45
 msgctxt "party_manage"
 msgid "Перед удалением должности её необходимо убрать у всех игроков!"
-msgstr "¡Antes de eliminar una posición, debe ser quitadas  de todos los jugadores!"
+msgstr ""
+"¡Antes de eliminar una posición, debe ser quitadas  de todos los jugadores!"
 
 #: party/views/management/roles/remove_role.py:60
 msgctxt "party_manage"
@@ -1058,7 +1064,8 @@ msgstr "¡juega de seguido y obtén recompensas!"
 #: player/templates/player/redesign/game_event/halloween.html:219
 msgctxt "game_event"
 msgid "- с 25.10 по 1.11 заполняй прогрессию события, расходуя энергию"
-msgstr "- del 25/10 al 1/11, completa la progresión del evento gastando energía"
+msgstr ""
+"- del 25/10 al 1/11, completa la progresión del evento gastando energía"
 
 #: player/templates/player/redesign/game_event/halloween.html:220
 msgctxt "game_event"
@@ -1112,13 +1119,21 @@ msgstr "Progresión personal del evento"
 
 #: player/templates/player/redesign/game_event/newyear.html:393
 msgctxt "game_event"
-msgid "Заполняется расходованием энергии, как и ежедневное финансирование, и зависит только от твоих личных усилий."
-msgstr "Se llena con gasto energético, como la financiación diaria, y depende únicamente de tu esfuerzo personal."
+msgid ""
+"Заполняется расходованием энергии, как и ежедневное финансирование, и "
+"зависит только от твоих личных усилий."
+msgstr ""
+"Se llena con gasto energético, como la financiación diaria, y depende "
+"únicamente de tu esfuerzo personal."
 
 #: player/templates/player/redesign/game_event/newyear.html:394
 msgctxt "game_event"
-msgid "Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один из трёх этапов зимней прогрессионой рамки аватара."
-msgstr "Le permitirá obtener una cuenta premium para un juego cómodo, así como una de las tres etapas de progresión del marco de avatar de invierno."
+msgid ""
+"Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один"
+" из трёх этапов зимней прогрессионой рамки аватара."
+msgstr ""
+"Le permitirá obtener una cuenta premium para un juego cómodo, así como una "
+"de las tres etapas de progresión del marco de avatar de invierno."
 
 #: player/templates/player/redesign/game_event/newyear.html:395
 msgctxt "game_event"
@@ -1132,13 +1147,21 @@ msgstr "Se llena con los esfuerzos de todos los jugadores en el servidor."
 
 #: player/templates/player/redesign/game_event/newyear.html:397
 msgctxt "game_event"
-msgid "Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь соответствующий этап личной."
-msgstr "No podrás recoger las recompensas desbloqueadas en la progresión general hasta que completes la etapa correspondiente de la personal."
+msgid ""
+"Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь"
+" соответствующий этап личной."
+msgstr ""
+"No podrás recoger las recompensas desbloqueadas en la progresión general "
+"hasta que completes la etapa correspondiente de la personal."
 
 #: player/templates/player/redesign/game_event/newyear.html:398
 msgctxt "game_event"
-msgid "Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы получить свою награду"
-msgstr "Cuando se abra la siguiente etapa de la progresión general, gasta energía para obtener tu recompensa"
+msgid ""
+"Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы "
+"получить свою награду"
+msgstr ""
+"Cuando se abra la siguiente etapa de la progresión general, gasta energía "
+"para obtener tu recompensa"
 
 #: player/templates/player/redesign/lists/skill_top.html:26
 #: player/templates/player/redesign/overview_skills.html:20
@@ -1294,11 +1317,13 @@ msgctxt "overview"
 msgid "партии"
 msgstr "Partidos"
 
+#. Last modified by Subaru, id 768
 #: player/templates/player/redesign/overview.html:482
 msgctxt "overview"
 msgid "государства"
 msgstr "del estado"
 
+#. Last modified by Subaru, id 768
 #: player/templates/player/redesign/overview.html:482
 msgctxt "overview"
 msgid "региона"
@@ -1527,6 +1552,7 @@ msgstr "partido"
 msgid "беспартийный"
 msgstr "sin afiliar"
 
+#. Last modified by Subaru, id 768
 #: player/templates/player/redesign/profile.html:236
 #: player/templates/player/redesign/view_profile.html:125
 msgctxt "profile"
@@ -1597,6 +1623,7 @@ msgctxt "wallet"
 msgid "Наличные"
 msgstr "Efectivo"
 
+#. Last modified by Subaru, id 768
 #: player/templates/player/translate/translate.html:17
 msgctxt "translations"
 msgid "без контекста"
@@ -1610,12 +1637,16 @@ msgctxt "translations"
 msgid "Собрать"
 msgstr "Nada que obtener"
 
+#. Last modified by Subaru, id 768
 #: player/templates/player/translate/translate.html:61
 msgctxt "translations"
 msgid "Русский язык"
 msgstr "Ruso"
 
+#. Last modified by Subaru, id 768
 #: player/templates/player/translate/translate.html:62
+#| msgctxt "cash_log"
+#| msgid "Перелёт"
 msgctxt "translations"
 msgid "Перевод"
 msgstr "Traducción"
@@ -1706,7 +1737,8 @@ msgid "Описание"
 msgstr "Descripción"
 
 #: player/views/change_back_allow.py:41
-#: player/views/change_wiki_hide_allow.py:41 player/views/full_auto_allow.py:41
+#: player/views/change_wiki_hide_allow.py:41
+#: player/views/full_auto_allow.py:41
 msgid "Некорректное значение"
 msgstr "Valor incorrecto"
 
@@ -1715,10 +1747,10 @@ msgid "Настройка партийного фона"
 msgstr "Personalizar fondo del partido"
 
 #: player/views/change_back_allow.py:57
-#: player/views/change_wiki_hide_allow.py:57 player/views/full_auto_allow.py:57
-#: player/views/set_language.py:54 player/views/set_timezone.py:43
-#: region/views/cancel_auto.py:35 region/views/retrieve_cash.py:42
-#: region/views/start_auto.py:78
+#: player/views/change_wiki_hide_allow.py:57
+#: player/views/full_auto_allow.py:57 player/views/set_language.py:54
+#: player/views/set_timezone.py:43 region/views/cancel_auto.py:35
+#: region/views/retrieve_cash.py:42 region/views/start_auto.py:78
 msgid "Ошибка метода"
 msgstr "Error de método"
 
@@ -1727,28 +1759,43 @@ msgstr "Error de método"
 msgid "Скрыть кнопку Wiki"
 msgstr ""
 
+#. Last modified by Subaru, id 768
 #: player/views/color_change.py:30
+#| msgctxt "w_trading"
+#| msgid "Некорректный владелец"
 msgctxt "profile"
 msgid "Некорректный код фона игры"
 msgstr "Código de fondo del juego incorrecto"
 
+#. Last modified by Subaru, id 768
 #: player/views/color_change.py:31 player/views/color_change.py:43
 #: player/views/color_change.py:55 player/views/color_change.py:67
+#| msgctxt "w_trading"
+#| msgid "Некорректный владелец"
 msgctxt "profile"
 msgid "Некорректный код цвета"
 msgstr "Código de color incorrecto"
 
+#. Last modified by Subaru, id 768
 #: player/views/color_change.py:42
+#| msgctxt "w_trading"
+#| msgid "Некорректный владелец"
 msgctxt "profile"
 msgid "Некорректный код блоков игры"
 msgstr "Código de bloques de juego incorrecto"
 
+#. Last modified by Subaru, id 768
 #: player/views/color_change.py:54
+#| msgctxt "assets"
+#| msgid "Некорректное действие"
 msgctxt "profile"
 msgid "Некорректный код текста игры"
 msgstr "Código de texto del juego incorrecto"
 
+#. Last modified by Subaru, id 768
 #: player/views/color_change.py:66
+#| msgctxt "w_trading"
+#| msgid "Некорректный владелец"
 msgctxt "profile"
 msgid "Некорректный код акцентов игры"
 msgstr "Código de acento del juego incorrecto"
@@ -1773,7 +1820,9 @@ msgstr "No se requiere recargar energía"
 
 #: player/views/expense_energy.py:60
 msgid "Недостаточно Энергетиков. Создайте их в Хранилище Склада"
-msgstr "No hay suficientes baterías. Créalas en el apartado de Almacenamiento del Almacén"
+msgstr ""
+"No hay suficientes baterías. Créalas en el apartado de Almacenamiento del "
+"Almacén"
 
 #: player/views/expense_energy.py:71
 msgid "Ошибка типа запроса"
@@ -2455,11 +2504,11 @@ msgctxt "goods"
 msgid "БПЛА - лимит"
 msgstr "VANT - límite"
 
-#: storage/models/storage.py:289
+#: storage/models/storage.py:271
 msgid "positive_spend_stock_req"
 msgstr ""
 
-#: storage/models/storage.py:294
+#: storage/models/storage.py:276
 msgid "not_enough"
 msgstr ""
 
@@ -2626,6 +2675,7 @@ msgctxt "w_auctions"
 msgid "Ставка"
 msgstr "Almacén"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/auctions/auction_info.html:57
 msgctxt "w_auctions"
 msgid "начальная"
@@ -2646,6 +2696,7 @@ msgctxt "w_auctions"
 msgid "Склад"
 msgstr "Almacén"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/auctions/auction_info.html:118
 msgctxt "w_auctions"
 msgid "Сделать ставку"
@@ -2680,11 +2731,13 @@ msgctxt "w_trading"
 msgid "Лотов"
 msgstr "Nº de lotes"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/auctions/auctions.html:42
 msgctxt "w_trading"
 msgid "Ставка (мин)"
 msgstr "Puja (mínima)"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/auctions/auctions.html:43
 msgctxt "w_trading"
 msgid "Ставка (макс)"
@@ -2725,15 +2778,11 @@ msgctxt "assets"
 msgid "передать"
 msgstr "transferir"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/assets.html:24
 msgctxt "assets"
 msgid "уничтожить"
 msgstr "destruir"
-
-#: storage/templates/storage/redesign/assets.html:43
-msgctxt "assets"
-msgid "уверен"
-msgstr ""
 
 #: storage/templates/storage/redesign/assets.html:49
 msgctxt "assets"
@@ -2828,7 +2877,9 @@ msgstr "Mejorar almacén"
 #: storage/templates/storage/redesign/storage.html:215
 msgctxt "storage_upgrade"
 msgid "Вы можете улучшить Склад, расширив хранилища части товаров"
-msgstr "Puede mejorar el Almacén ampliando el inventario de una parte de los productos"
+msgstr ""
+"Puede mejorar el Almacén ampliando el inventario de una parte de los "
+"productos"
 
 #: storage/templates/storage/redesign/storage.html:216
 msgctxt "storage_upgrade"
@@ -2853,8 +2904,11 @@ msgstr "No hay suficientes materiales"
 
 #: storage/templates/storage/redesign/storage.html:258
 msgctxt "storage_upgrade"
-msgid "Выберите товары в каждой из категорий, ёмкость Склада для которых будет увеличена"
-msgstr "Seleccione bienes en cada categoría para cambiar la capacidad del almacén"
+msgid ""
+"Выберите товары в каждой из категорий, ёмкость Склада для которых будет "
+"увеличена"
+msgstr ""
+"Seleccione bienes en cada categoría para cambiar la capacidad del almacén"
 
 #: storage/templates/storage/redesign/storage.html:265
 msgctxt "storage_upgrade"
@@ -2888,13 +2942,21 @@ msgstr "de cuenta Premium"
 
 #: storage/templates/storage/redesign/storage.html:366
 msgctxt "storage_assets"
-msgid "Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно отменить. Продолжить?"
-msgstr "Tu cuenta premium se renovará por un mes. Esta acción no se puede deshacer. ¿Proceder?"
+msgid ""
+"Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно "
+"отменить. Продолжить?"
+msgstr ""
+"Tu cuenta premium se renovará por un mes. Esta acción no se puede deshacer. "
+"¿Proceder?"
 
 #: storage/templates/storage/redesign/storage.html:368
 msgctxt "storage_assets"
-msgid "Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию невозможно отменить. Продолжить?"
-msgstr "Activarás la cuenta premium durante un mes. Esta acción no se puede deshacer. ¿Proceder?"
+msgid ""
+"Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию "
+"невозможно отменить. Продолжить?"
+msgstr ""
+"Activarás la cuenta premium durante un mes. Esta acción no se puede "
+"deshacer. ¿Proceder?"
 
 #: storage/templates/storage/redesign/storage.html:371
 msgctxt "storage_assets"
@@ -3161,6 +3223,7 @@ msgctxt "assets"
 msgid "Перемещение товара"
 msgstr "Transferir bienes"
 
+#. Last modified by Subaru, id 768
 #: storage/views/assets/assets_action.py:89
 msgctxt "assets"
 msgid "Запрещено вывозить товары из атакованных регионов"
@@ -3281,6 +3344,7 @@ msgctxt "assets"
 msgid "Указанный Склад уже в текущем регионе"
 msgstr "El Almacén especificado ya esta en la actual región"
 
+#. Last modified by Subaru, id 768
 #: storage/views/assets/storage_move.py:69
 msgctxt "assets"
 msgid "Нельзя переместить Склад из атакованного региона"
@@ -3374,11 +3438,13 @@ msgctxt "storage_upgrade"
 msgid "Улучшение Склада"
 msgstr "Mejora de almacén"
 
+#. Last modified by Subaru, id 768
 #: storage/views/storage/upgrade_storage.py:44
 msgctxt "storage_upgrade"
 msgid "Уровень Склада - максимальный"
 msgstr "Nivel máximo"
 
+#. Last modified by Subaru, id 768
 #: storage/views/storage/upgrade_storage.py:53
 msgctxt "storage_upgrade"
 msgid "Недостаточно материала: "
@@ -3536,6 +3602,7 @@ msgctxt "w_trading"
 msgid "Торговое предложение успешно принято"
 msgstr "Oferta de comercio aceptada exitósamnete"
 
+#. Last modified by Subaru, id 768
 #: storage/views/trading/cancel_offer.py:39
 #: storage/views/trading/cancel_offer.py:52
 #: storage/views/trading/cancel_offer.py:60
@@ -3649,6 +3716,7 @@ msgctxt "w_trading_new"
 msgid "Торговое предложение успешно создано"
 msgstr "Oferta comercial creada correctamente"
 
+#. Last modified by Subaru, id 768
 #: storage/views/trading/get_offers.py:39
 #: storage/views/trading/get_offers.py:61
 #: storage/views/trading/get_offers.py:188
